--- a/.github/hello-world.yml
+++ b/.github/hello-world.yml
@@ -4,7 +4,7 @@ on: push
 
 jobs:
   hello-world-job:
-    run-on: ubuntu-latest
+    runs-on: ubuntu-latest
 
     steps:
       - name: check out repository code
