Update hello_world.yml in correct directory

--- a/.github/workflows/hello_world.yml
+++ b/.github/workflows/hello_world.yml
@@ -4,7 +4,8 @@ on: push
 
 jobs:
   hello-world-job:
-    run-on: ubuntu-latest
+  
+    runs-on: ubuntu-latest
 
     steps:
       - name: check out repository code
